# ayed_herencia_polimorfismo

./: CMakeLists.txt  README.md  main.cpp
include/: Animal.hpp  Gato.hpp  Megatron.hpp  Transformer.hpp
src/: Animal.cpp  Gato.cpp  Megatron.cpp  Transformer.cpp
